# ColBERT

./: .env  README2.md  call_server.py  main.py  pyproject.toml  server.py
colbert/indexing/codecs/: residual.py
colbert/search/: index_storage.py
